k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
  matchLabels:
    app: frontend
  template:
    metadata:
      labels:
        app: frontend
  spec:
    containers:
      - name: frontend
        image: akanshachauhary/kube-visualizer-frontend:latest
        ports:
          - containerPort: 3000
