k8s/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: web
      port: 80
      targetPort: 80
      nodePort: 30080
    - name: websecure
      port: 443
      targetPort: 443
      nodePort: 30443
